Container/Kubernetes/12.Ingress/04.CDN/Deploy-default.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cdn-deployment
spec:
  selector:
    matchLabels:
      app: cdn
  template:
    metadata:
      labels:
        app: cdn
    spec:
      containers:
      - name: cdn
        image: us-docker.pkg.dev/google-samples/containers/gke/hello-app-cdn:1.0
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: cdn-service
  annotations:
    cloud.google.com/backend-config: '{"default": "my-backend-config"}'
spec:
  type: NodePort
  selector:
    app: cdn
  ports:
  - port: 80
    targetPort: 8080
---
