Container/Kubernetes/12.Ingress/04.CDN/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: cdn-router
  annotations:
    kubernetes.io/ingress.class: "gce"
    external-dns.alpha.kubernetes.io/hostname: app.bjohn.online
spec:
  defaultBackend:
    service:
      name: cdn-service
      port:
        number: 80

---
